Deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spring-petclinic

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  namespace: spring-petclinic
  labels:
    app: spring-petclinic-app
spec:
  selector:
    matchLabels:
        app: spring-petclinic-app
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: spring-petclinic-app
    spec:
      containers:
        - name: spring-petclinic-app
          image: 390585564163.dkr.ecr.ap-south-1.amazonaws.com/spring-petclinic:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: spring-petclinic
spec:
  selector:
    app: spring-petclinic-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  namespace: spring-petclinic
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-06cedccc6ad946ab5, subnet-0433a017495bd4e76, subnet-08922f32e7691e9d0
    alb.ingress.kubernetes.io/security-groups:
    alb.ingress.kubernetes.io/scheme: internet-facing


spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: java-app-service
                port:
                  number: 80
